# gfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
extensions/glad/: CMakeLists.txt  README.md
extensions/glad/include/glad/: glad.h
extensions/glad/src/: glad.c
opengl/: CMakeLists.txt  README.md
opengl/fixed-functional-pipeline/: CMakeLists.txt  README.md
opengl/fixed-functional-pipeline/01_initialization/: CMakeLists.txt  README.md  main.cpp
opengl/fixed-functional-pipeline/02_simple_fullscreen/: CMakeLists.txt  README.md  main.cpp
opengl/fixed-functional-pipeline/03_fullscreen/: CMakeLists.txt  README.md  main.cpp
opengl/glad/: CMakeLists.txt  README.md
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
opengl/opengl-embedded-system/: README.md
opengl/opengl-embedded-system/01_initialization/: README.md  settings.gradle
opengl/opengl-embedded-system/01_initialization/app/: build.gradle
opengl/opengl-embedded-system/01_initialization/app/src/main/: AndroidManifest.xml
opengl/opengl-embedded-system/01_initialization/app/src/main/cpp/: CMakeLists.txt  native_game_activity.cpp
opengl/opengl-embedded-system/01_initialization/app/src/main/res/values-night/: themes.xml
opengl/opengl-embedded-system/02_fullscreen/: README.md  settings.gradle
opengl/opengl-embedded-system/02_fullscreen/app/: build.gradle
opengl/opengl-embedded-system/02_fullscreen/app/src/main/: AndroidManifest.xml
opengl/opengl-embedded-system/02_fullscreen/app/src/main/cpp/: CMakeLists.txt  main.cpp  native_app_glue.cpp
opengl/opengl-embedded-system/02_fullscreen/gradle/: libs.versions.toml
opengl/programmable-pipeline/: README.md
opengl/programmable-pipeline/01_initialization/: CMakeLists.txt  README.md  main.cpp
opengl/programmable-pipeline/02_simple_fullscreen/: CMakeLists.txt  README.md  main.cpp
opengl/programmable-pipeline/03_fullscreen/: CMakeLists.txt  README.md  main.cpp
tutorials/opengl/: CMakeLists.txt  README.md
tutorials/opengl/embedded-system/: README.md
tutorials/opengl/embedded-system/001_native_activity/: README.md  settings.gradle.kts
tutorials/opengl/embedded-system/001_native_activity/app/: build.gradle.kts
tutorials/opengl/embedded-system/001_native_activity/app/src/main/: AndroidManifest.xml
tutorials/opengl/embedded-system/001_native_activity/gradle/: libs.versions.toml
tutorials/opengl/embedded-system/002_game_activity/: README.md  settings.gradle.kts
tutorials/opengl/embedded-system/002_game_activity/app/: build.gradle.kts
tutorials/opengl/embedded-system/002_game_activity/app/src/main/: AndroidManifest.xml
tutorials/opengl/embedded-system/003_gles_initialization/: README.md  settings.gradle.kts
tutorials/opengl/embedded-system/003_gles_initialization/app/: build.gradle.kts
tutorials/opengl/embedded-system/003_gles_initialization/app/src/main/: AndroidManifest.xml
tutorials/opengl/embedded-system/004_fullscreen/: README.md  settings.gradle.kts
tutorials/opengl/embedded-system/004_fullscreen/app/: build.gradle.kts
tutorials/opengl/embedded-system/004_fullscreen/app/src/main/: AndroidManifest.xml
tutorials/opengl/embedded-system/004_fullscreen/gradle/: libs.versions.toml
tutorials/opengl/embedded-system/004_fullscreen/gradle/wrapper/: gradle-wrapper.properties
tutorials/opengl/embedded-system/a01_initialization/app/: build.gradle.kts
tutorials/opengl/embedded-system/a01_initialization/app/src/main/: AndroidManifest.xml
tutorials/opengl/embedded-system/a02_fullscreen/: README.md
tutorials/opengl/embedded-system/a02_fullscreen/app/: build.gradle.kts
tutorials/opengl/embedded-system/a02_fullscreen/app/src/main/: AndroidManifest.xml
tutorials/opengl/fixed-pipeline/: CMakeLists.txt  README.md
tutorials/opengl/fixed-pipeline/001_glfw_window/: README.md  main.cpp
tutorials/opengl/fixed-pipeline/001_ogl2_glfw_window/: README.md  main.cpp
tutorials/opengl/fixed-pipeline/002_ogl2_opengl_initialization/: README.md  main.cpp
tutorials/opengl/fixed-pipeline/002_opengl_initialization/: main.cpp
tutorials/opengl/fixed-pipeline/003_ogl2_simple_fullscreen/: README.md  main.cpp
tutorials/opengl/fixed-pipeline/003_simple_fullscreen/: README.md  main.cpp
tutorials/opengl/fixed-pipeline/004_actual_fullscreen/: main.cpp
tutorials/opengl/fixed-pipeline/004_ogl2_actual_fullscreen/: CMakeLists.txt  README.md  main.cpp
tutorials/opengl/programmable-pipeline/: CMakeLists.txt  README.md
tutorials/opengl/programmable-pipeline/001_ogl4_glfw_window/: README.md  main.cpp
tutorials/opengl/programmable-pipeline/002_ogl4_opengl_initialization/: README.md  main.cpp
tutorials/opengl/programmable-pipeline/003_ogl4_simple_fullscreen/: main.cpp
tutorials/opengl/programmable-pipeline/004_ogl4_actual_fullscreen/: README.md  main.cpp
tutorials/vulkan/: CMakeLists.txt  README.md
tutorials/vulkan/001_vulkan_glfw_window/: README.md  main.cpp
tutorials/vulkan/002_vulkan_instance/: README.md  main.cpp
tutorials/vulkan/003_vulkan_debug_utils_ext/: README.md  main.cpp
tutorials/vulkan/004_vulkan_surface/: README.md  main.cpp
tutorials/vulkan/005_vulkan_phy_device/: README.md  main.cpp
tutorials/vulkan/006_vulkan_device/: README.md  main.cpp
tutorials/vulkan/007_vulkan_swapchain/: README.md  main.cpp
tutorials/vulkan/008_vulkan_swapchain_images/: README.md  main.cpp
tutorials/vulkan/009_vulkan_image_views/: README.md  main.cpp
tutorials/vulkan/010_vulkan_swapchain_recreation/: README.md  main.cpp
tutorials/vulkan/011_vulkan_render_pass/: README.md  main.cpp
tutorials/vulkan/012_vulkan_frame_buffers/: README.md  main.cpp
tutorials/vulkan/013_vulkan_sync_objects/: CMakeLists.txt  README.md  main.cpp
tutorials/vulkan/014_vulkan_cmd_buffer/: README.md  main.cpp
tutorials/vulkan/015_vulkan_initialization/: README.md  main.cpp
tutorials/vulkan/016_vulkan_simple_fullscreen/: README.md  main.cpp
tutorials/vulkan/017_vulkan_actual_fullscreen/: README.md  main.cpp
vulkan/01_initialization/: CMakeLists.txt  README.md  main.cpp
vulkan/03_fullscreen/: CMakeLists.txt  README.md  main.cpp
(+63 files in other folders)
